fixed bug where subheader would be stuck at 1 line height instead of returning to default

--- a/my-app/src/styles/Resume.css
+++ b/my-app/src/styles/Resume.css
@@ -99,6 +99,7 @@
     margin-bottom: 100px;
   }
 }
+
 /* Medium sized monitors */
 @media only screen and (max-width: 1690px) {
   #resumeBlock {
@@ -124,9 +125,9 @@
   }
 
   .resumeTalentOption {
+    top: -40px;
     width: 80%;
   }
-
 }
 
 /* Laptop screens */
